...
      VoiceFlowAIFirebaseUser(user);
}

Stream<BaseAuthUser> voiceFlowAIFirebaseUserStream() => FirebaseAuth.instance
        .authStateChanges()
        .debounce((user) => user == null && !loggedIn
            ? TimerStream(true, const Duration(seconds: 1))
            : Stream.value(user))
        .map<BaseAuthUser>(
      (user) {
        currentUser = VoiceFlowAIFirebaseUser(user);
        return currentUser!;
      },
...
